# hackathon-tt-py-gutta-consulting

./: .pyscn.toml  AUTORESEARCH_LOOP.md  CODE_QUALITY_ANALYSIS.md  COMPETITIVE_ANALYSIS.md  PRIORITIZATION.md  RESEARCH_PLAN.md  RULE_FIX_APPROACH.md  RULE_VIOLATIONS.md  SOLUTION.md  TRANSPILER_ARCHITECTURE.md  oslo-enhanced-hackathon-2026.md
docs/: COMPLIANCE.md  RESEARCH.md
translations/ghostfolio_pytx/app/implementation/portfolio/calculator/roai/: portfolio_calculator.py
tt/: pyproject.toml
tt/tt/: config.py  emitter.py  endpoints.py  parser.py  translator.py  transpiler.py
tt/tt/scaffold/ghostfolio_pytx/: tt_import_map.json
tt/tt/scaffold/ghostfolio_pytx/app/implementation/portfolio/calculator/: helpers.py
tt/tt/transforms/: big_js.py  stdlib.py
