[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tt"
version = "0.1.0"
description = "Translation tool - copies implementation from ghostfolio_pytx_example"
requires-python = ">=3.11"
# tree-sitter + tree-sitter-typescript: MIT-licensed AST parsing libraries.
# Allowed under Rule 5 ("You may use AST libraries in python").
# Pure C extension — no node/js at runtime (Rule 6 compliant).
# Compliance audit: docs/COMPLIANCE.md
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "tree-sitter>=0.23",
    "tree-sitter-typescript>=0.23",
    "supabase>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "requests>=2.32",
]

[project.scripts]
tt = "tt.cli:main"

[tool.setuptools.packages]
find = {}
